# forest_cover_type

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
models/: best_model.joblib  model.joblib
notebooks/: eda.ipynb
src/: main.py
src/forest_cover_type/data/: generate_eda_report.py  load_dataset.py
src/forest_cover_type/features/: build_features.py
src/forest_cover_type/models/: make_pipeline.py  predict.py  select_and_evaluate.py  train.py
tests/: sample.csv  test_train.py  test_train_integration.py
tests/fixtures/: test.csv
