[tool.poetry]
name = "forest_cover_type"
version = "0.1.0"
description = "Final project for RS School Machine Learning course"
authors = ["Sabina Bayramova <sb.sabina00@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
