[tool.poetry]
name = "forest_cover_type"
version = "0.1.0"
description = "Final project for RS School Machine Learning course"
authors = ["Sabina Bayramova <sb.sabina00@gmail.com>"]

[tool.poetry.scripts]
generate-eda = "forest_cover_type.data.generate_eda_report:generate_eda"
train = "forest_cover_type.models.train:train"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.2"
pandas = "1.3.5"
pandas-profiling = "^3.1.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
